--- a/css/tea-styles.css
+++ b/css/tea-styles.css
@@ -1,10 +1,40 @@
 /* use media queries for screen sizes 500px, 800px, 1200px */ 
 
-body {
+/* body {
     background-color: tan;
     color: black;
   }
-  
+   */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.container {
+    border: 3px solid red;
+}
+
+.background-card {
+
+    display: flex;
+    justify-content: center;
+    border: 3px solid blue;
+
+    /* 
+        Horizontal align with justify-content
+        justify-content: flex-start;
+        vertically align with 
+        align-items
+    */
+}
+
+.card {
+    border: 3px solid green;
+    width: 30%;
+}
+
   /* On screens that are 992px wide or less, the background color is blue */
   @media screen and (max-width:800px) {
     body {
