--- a/css/tea-styles.css
+++ b/css/tea-styles.css
@@ -1,10 +1,10 @@
 /* use media queries for screen sizes 500px, 800px, 1200px */ 
 
-/* body {
+body {
     background-color: tan;
     color: black;
   }
-   */
+  
 
 * {
     margin: 0;
@@ -12,14 +12,13 @@
     box-sizing: border-box;
 }
 
-.container {
-    border: 3px solid red;
-}
+
 
 .background-card {
 
     display: flex;
     justify-content: center;
+    flex-direction: row;
     border: 3px solid blue;
 
     /* 
@@ -32,10 +31,25 @@
 
 .card {
     border: 3px solid green;
-    width: 30%;
+    flex-basis: 30%;
 }
 
-  /* On screens that are 992px wide or less, the background color is blue */
+.green {
+    flex: 1;
+    order: 3;
+}
+
+.bop {
+    flex: 2;
+    order: 1;
+}
+
+.lemon {
+    flex: 1;
+    order: 2;
+}
+
+  /* On screens that are 800px wide or less, the background color is blue */
   @media screen and (max-width:800px) {
     body {
       background-color: blue;
@@ -43,10 +57,37 @@
     }
   }
   
-  /* On screens that are 600px wide or less, the background color is olive */
+  /* On screens that are 500px wide or less, the background color is olive */
   @media screen and (max-width: 500px) {
     body {
-      background-color: olive;
-      color: white;
+      background-color: lightgrey;
+      color: black;
+    }
+
+    .background-card {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .card {
+        padding: 10px;
+    }
+
+    img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+    }
+
+    .green {
+        flex: 1;
+    }
+    
+    .bop {
+        flex: 1;
+    }
+    
+    .lemon {
+        flex: 1;
     }
   }
